--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <p>저는 산책하는 것을 좋아합니다. 주변을 걸어다니는 과정에서 생각을 정리하고 머리를 비울 수 있기 때문입니다.</p>
             </section>
 
-            <section> class="section-card">
+            <section class="section-card">
                 <h3>관심 분야</h3>
                 <ul class="tag-list">
                     <li class="tag">it기술</li>
