--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
             <section class="section-card">
                 <h3>관심 분야</h3>
                 <ul class="tag-list">
-                    <li class="tag">it기술</li>
+                    <li class="tag">IT기술</li>
                     <li class="tag">경영</li>
                     <li class="tag">마케팅</li>
                 </ul>
             </section>
+
 
             <section class="section-card">
                 <h3>산책과 경영</h3>
