--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         </div>
                     </div>
                 </div>
-            <section class="section-card">
+            <section class="section-card side-card">
                 <h3>about me</h3>
                 <p>저는 산책하는 것을 좋아합니다. 주변을 걸어다니는 과정에서 생각을 정리하고 머리를 비울 수 있기 때문입니다.</p>
             </section>
