update layout and fix duplication

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             </div>
 
             <div class="info-item">
-              <span class="info-label">취미</span>
-              <span class="info-value">산책하기</span>
+              <span class="info-label">특기</span>
+              <span class="info-value">데이터 분석</span>
             </div>
 
 
